package main.interfaces;

public interface VeicoloElettrico {

    double getAutonomiaBatteria();
    void ricarica();

}
