package main.interfaces;

public interface Riparabile {
    double calcolaCostoRiparazione(int oreLavoro);


}
